--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,10 +6,14 @@ jobs:
     run-github-actions:
         runs-on: ubuntu-latest
         steps:
+            - name: list files
+              run: |
+              pwd
+              ls 
             - name: sample javascript action
               id: hello
               uses: action/hello-world-javascript-action@v1 
-              with:
+              with: 
                 who-to-greet: devopshint
 
             - name: get the output time
